@startuml
'https://plantuml.com/class-diagram
hide circle

class AthletiCLI{
    main()
    run()

}
class Ui{
    getInstance():Ui
    getUserCommand():String
    showMessages(Messages: String)
    showException(e: Exception)

}
class Parser{
     parseCommand(rawUserInput: String):Command
}
class Data{
    getInstance():Data
    load()
    save()
}



AthletiCLI --> Ui
AthletiCLI --> Parser
AthletiCLI --> Data
@enduml